# rey_lib

./: .gitignore  README.md  error_utils.py  ftp_client.py  install.manifest.json  log_utils.py  pyproject.toml  requirements.txt  rey_lib.reference.yaml  state_manager.py
.github/: copilot-instructions.md
contracts/: LLM_Programming_Contract_Generic.md  MySQL Procedures Formatting.md  SQL Formatting.md  SQLServer_Procedures_Formatting.md  YAML_Config_Guide.md  rey_apps_code_philosophy_alignment_contract_v1.md
rey_lib/: __init__.py  duckdb_utils.py  encryption.py  error_utils.py  ftp_client.py  log_utils.py  pyproject.toml  run_lifecycle.py  state_manager.py  sync_engine.py
rey_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rey_lib/artifacts/: __init__.py  api.py  cli.py  config.py  config_validation.py  errors.py  post_processor.py
rey_lib/config/: bootstrap.py  cli.py  config_context.py  config_loader.py  config_namespace.py  config_paths.py  config_utils.py  ctx.py  inventory.py  provenance.py
rey_lib/control/: __init__.py  control_utils.py
rey_lib/db/: db_adapter.py  duckdb_utils.py  mysql_utils.py  object_filter.py  postgres_utils.py  procedure_map.py  sqlserver_utils.py
rey_lib/errors/: error_utils.py
rey_lib/files/: __init__.py  file_loader.py  file_utils.py  loader.py  parse_utils.py  (+3 more)
tests/: test_ambient_file_recording.py  test_artifact_manifest_expansion.py  test_artifact_normalization.py  test_bootstrap.py  test_build_ctx_from_path.py  test_config_compatibility_aliases.py  test_config_file_recording.py  test_config_provenance.py  test_config_sources.py  test_config_utils_facade.py  test_error_utils_redact_text.py  test_file_authority.py  test_file_loader_artifacts.py  test_file_loader_logging.py  test_file_movement_state.py  test_file_operation_enrichment.py  test_file_operation_projection.py  test_file_profiler_numeric.py  test_file_reference_metadata.py  test_file_utils.py  test_formatting.py  test_full_installation_workflows.py  test_git.py  test_hierarchy_delayed_descent.py  test_hierarchy_parenting.py  test_installation_inventory.py  test_jsonl_event_table.py  test_jsonl_handler.py  test_llm_canonical_package.py  test_llm_package.py  test_log_summary_framework.py  test_log_utils.py  test_messaging.py  test_nest_level.py  test_nesting_contract.py  test_ownership_return.py  test_parent_resolver_descent.py  test_path_key_resolution.py  test_pipeline_reset.py  test_primitive_file_io.py  (+13 more)
(+118 files in other folders)
