[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rey_lib"
version = "0.9.3"
description = "Shared reusable library — config, logging, error handling, FTP, file I/O, DuckDB."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
ftp = []          # ftp_client and state_manager use stdlib only; SFTP requires [sftp]
sftp = [
    "paramiko>=3.0.0",
]
duckdb = [
    "duckdb>=0.10.0",
]
files = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.4",
    "black>=24.4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rey_lib*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
