[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rey_lib"
version = "2.0.0"
description = "Shared reusable library — config, logging, error handling, FTP, file I/O, DuckDB."
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=4.0.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
ftp = []          # ftp_client and state_manager use stdlib only; SFTP requires [sftp]
sftp = [
    "paramiko>=3.0.0",
]
duckdb = [
    "duckdb>=0.10.0",
]
files = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]
encrypt = [
    "cryptography>=41.0.0",
]
control = [
    "psycopg2-binary>=2.9.0",
]
sqlserver = [
    # SQL Server backend (rey_lib/db/sqlserver_utils.py). Requires system ODBC
    # libraries (unixODBC) and the Microsoft ODBC Driver 18 for SQL Server.
    "pyodbc>=5.0.0",
]
artifacts = [
    # Artifact post-processing (rey_lib/artifacts). SQLFluff is the first SQL
    # formatting/linting engine adapter.
    "sqlfluff>=4.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.4",
    "black>=24.4.2",
]

[project.scripts]
rey-format-sql = "rey_lib.artifacts.cli:main"
rey-format-artifact = "rey_lib.artifacts.cli:main"
rey-validate-yaml = "rey_lib.artifacts.cli:validate_yaml_main"
rey-validate-config = "rey_lib.artifacts.cli:validate_config_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rey_lib*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
